ARTEMIS-5734 upgrade to Netty 4.2